<resources>
    <string name="app_name" translatable="false">QuizRoom</string>
    <string name="quiz_room" translatable="false">QUIZ-R00M</string>
    <string name="WelcomeText">Are you ready to test your knowledge? \nComputer science, music, geography, science, zoology are only few of our categories that will test your ability to answer. \nBe aware, your wrong answers are not unlimited, just like your time to answer. Good luck.</string>
    <string name="NameText">NickName </string>
    <string name="AnswearHere">Please write your answer here. </string>
    <string name="ScoreTableTitle">Score Table \n Local Top 10 !</string>
    <string name="ScoreTableTitle2">Score Table \n Global Top 30 !</string>
    <string name="noInternet">It is not possible to show global score table because there is no Internet connection !</string>
    <string name="noInternet2">No Internet connection !</string>

    <string name="Stage1"><![CDATA[<b>Next Level:</b> 1  <br /> <br /> To continue to the next level you have to answer correctly in <b>2</b> of <b>5</b> questions in <b>60 seconds!</b>]]></string>
    <string name="Stage2"><![CDATA[<b>Nice work!<br /><br />Next Level:</b> 2  <br /><br />To continue to the next level you have to answer correctly in <b>2</b> of <b>5</b> questions in <b>55 seconds!</b>]]></string>
    <string name="Stage3"><![CDATA[<b>Excellent!<br /><br />Next Level:</b> 3  <br /><br />To continue to the next level you have to answer correctly in <b>3</b> of <b>5</b> questions in <b>55 seconds!</b>]]></string>
    <string name="Stage4"><![CDATA[<b>Super!<br /><br />Next Level:</b> 4  <br /><br />To continue to the next level you have to answer correctly in <b>3</b> of <b>5</b> questions in <b>50 seconds!</b>]]></string>
    <string name="Stage5"><![CDATA[<b>Incredible!<br /><br />Next Level:</b> 5 <br /><br />To continue to the next level you have to answer correctly in <b>4</b> of <b>5</b> questions in <b>50 seconds!</b>]]></string>
    <string name="Stage6"><![CDATA[<b>You are on fire!<br /><br />Next Level:</b> 6 <br /><br />To continue to the next level you have to answer correctly in <b>4</b> of <b>5</b> questions in <b>45 seconds!</b>]]></string>
    <string name="Stage7"><![CDATA[<b>God-like!<br /><br />Next Level:</b> 7 <br /><br />To finish and earn the 300 point bonus you have to answer correctly in <b>5</b> of <b>5</b> questions in <b>40 seconds!</b>]]></string>

    <string name="TotalScore">Total Score:</string>
    <string name="Score">Score Table</string>
    <string name="TimeBonus">Time Bonus:</string>
    <string name="QuestionLevelTotal">Round Score:</string>
    <string name="Points">" Points"</string>
    <string name="Sec">" sec"</string>
    <string name="SecondsLeft"> Seconds Left: </string>
    <string name="ReadyForNextLevel">Ready for the next level?</string>
    <string name="GameOver">"Game Over! "</string>
    <string name="Final">Unbelievable !</string>

    <string name="CreatedBy">Created By :</string>
    <string name="Myname">lsourtzo</string>

    <string name="StartupLoginText">To continue in please select one of the following methods:</string>

    <string name="LoginWelcome">Welcome to Quiz Room.</string>
    <string name="NameTitle">Please write your NickName in text box  bellow: </string>
    <string name="LoginText">To continue please select one of the following methods:</string>
    <string name="emailLoginText">1. using email acount</string>
    <string name="email1" translatable="false">username :</string>
    <string name="password1">password :</string>
    <string name="email2">write your e-mail here</string>
    <string name="password2">write your password here</string>
    <string name="googleLoginText">2. using your google account</string>
    <string name="google1">Login with Google</string>
    <string name="google2">we guarantee a secured authentication.</string>
    <string name="Register1">Register</string>
    <string name="Register2">create new account.</string>
    <string name="Login1">Login</string>
    <string name="Login2">for existing user only.</string>
    <string name="Login2b">only the biggest score of every account per email address in Global score table.</string>
    <string name="noLoginText">3. without login</string>
    <string name="nologin1">Play local</string>
    <string name="nologin2">in few questions only, without possibility of publish your score at Global Score Table. </string>

    <string name="toastLoginMessage1a1">User with this email already exist. </string>
    <string name="toastLoginMessage1a2">Registration error</string>
    <string name="toastLoginMessage2">Successful registration</string>
    <string name="toastLoginMessage3">Username must be in email format and your password must be at least 6 characters</string>
    <string name="toastLoginMessage4">There is no Internet connection</string>

    <string name="toastLoginMessage1b1">Invalid username</string>
    <string name="toastLoginMessage1b2">Invalid password</string>
    <string name="toastLoginMessage2b">Successful Login</string>

    <string name="toastNickNameCheck">Your Nickname must be 3 to 20 characters.</string>

    <string name="toastGoogleMessage1a1">Something is going wrong, sorry try again later.</string>
    <string name="googlesignout">Change Google account</string>

    <string name="loginScreenButtonText">Connect or change connection method.</string>

</resources>
